update the swagger for debank and also add the format for all the provider controllers
